<resources>

    //String de configuración de la app
    <string name="st_app_name">Goazen</string>
    <string name="st_navigation_drawer_open">Open navigation drawer</string>
    <string name="st_navigation_drawer_close">Close navigation drawer</string>
    <string name="st_nav_header_title">Android Studio</string>
    <string name="st_nav_header_subtitle">android.studio@android.com</string>
    <string name="st_nav_header_desc">Navigation header</string>
    <string name="st_action_settings">Settings</string>

    //Titulos de las opciones de menu Cliente
    <string name="st_menu_perfil">Editar Perfil</string>
    <string name="st_menu_servicio">Servicios</string>
    <string name="st_menu_ubicacion">Ubicación</string>
    <string name="st_menu_contacto">Contacto</string>
    <string name="st_menu_recibos">Recibos</string>
    <string name="st_menu_logout">Log out</string>
    <string name="st_menu_ardilla">Ardillita Perez</string>

    //Strings para el activity_main_drawer
    <string name="titulo_op_menu">Menu</string>
    <string name="titulo_op_menu2">Perfil</string>

    //String para el textview del fragment de ubicación
    <string name="st_dir_ubicacion">Hurtado de Amezaga 1 Edificio Nervión</string>

    //Strings para Contactos
    <string name="st_contacto_n">Contacta con nosotros</string>
    <string name="st_contacto_Tel_0">Teléfono:</string>
    <string name="st_contacto_Tel_1">944443322</string>
    <string name="st_contacto_Tel_2">606121314</string>
    <string name="st_contacto_Correo_0">E-mail:</string>
    <string name="st_contacto_Correo_1">goazenbilbao@gmail.com</string>
    <string name="st_contacto_Mensaje">Deja tu pregunta o sugerencia </string>
    <string name="st_contacto_Boton_Enviar">Enviar </string>
    <string name="st_contacto_Asunto">Asunto </string>
    <string name="st_contacto_Email">e-mail </string>
    <string name="st_contacto_Mensajetxt">Escribe tu mensaje aqui </string>

    //Strings para Recibos
    <string name="st_recibo_descarga">Descargar</string>
    //datos de prueba,estos se borran al conectar la base de datos
    //1
    <string name="st_recibo_cod1">C125879</string>
    <string name="st_recibo_Precio1">10€</string>
    <string name="st_recibo_resumen1">Plancha</string>
    //2
    <string name="st_recibo_cod2">C125792</string>
    <string name="st_recibo_Precio2">6€</string>
    <string name="st_recibo_resumen2">Paseo de mascotas</string>
    //3
    <string name="st_recibo_cod3">C982456</string>
    <string name="st_recibo_Precio3">8€</string>
    <string name="st_recibo_resumen3">Limpieza de cristales</string>
    //4
    <string name="st_recibo_cod4">C482367</string>
    <string name="st_recibo_Precio4">11€</string>
    <string name="st_recibo_resumen4">Cocinar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Opciones de servicios
    <string name="st_limpieza_general">Limpieza General</string>
    <string name="st_cocina">Cocina</string>
    <string name="st_plancha">Plancha</string>
    <string name="st_lavanderia">Lavanderia</string>
    <string name="st_regado_plantas">Regado de Plantas</string>
    <string name="st_limpieza_cristales">Limpieza de Cristales</string>
    <string name="st_paseo_mascotas">Paseo de Mascotas</string>
    <string name="st_contratar">Contratar</string>
    <string name="st_cancelar">Cancelar</string>

    //String fragmet horario calendario
    <string name="st_mensaje_horario">Seleccione una hora para el servicio que ha seleccionado.</string>
    <string name="st_primera_hora">10:00</string>
    <string name="st_segunda_hora">11:00</string>
    <string name="st_tercera_hora">12:00</string>

    //Botones calendario
    <string name="st_boton_asignar"> Asignar</string>
    <string name="st_boton_cancelar"> Cancelar</string>
    <string name="asunto">Asunto</string>
    <string name="st_boton_atras"> Atras</string>


    //String popUp de pagos
    <string name="st_selec_metodo_pago">Seleccione por favor una opción de pago</string>
    <string name="st_cb_pago_tarjeta">Tarjeta </string>
    <string name="st_tv_pago_tarjeta_n_tarjeta">Introduzca el numero de tarjeta</string>
    <string name="st_tv_pago_tarjeta_cod_seguridad">Introduzca el codigo de seguridad</string>
    <string name="st_cb_pago_transferencia">Transferencia</string>
    <string name="st_tv_pago_transferencia">El numero de cuenta en el que realizar la trasferencia es:</string>
    <string name="st_tv_pago_transferencia_numero_cuenta">"1234–5678-9098-7654"</string>
    <string name="st_pagar_contrato">Pagar</string>

    //String para Editar Perfil
    <string name="st_perfil_nombre">Nombre</string>
    <string name="st_perfil_apellido">Apellido</string>
    <string name="st_perfil_email">Email</string>
    <string name="st_perfil_telefono">Telefono</string>
    <string name="st_perfil_direccion">Direccion</string>
    <string name="st_perfil_dni">DNI</string>
    <string name="st_perfil_fnacimiento">Fecha de Nacimiento</string>
    <string name="st_perfil_d_email">email@email.com</string>
    <string name="st_perfil_d_telefono">654654654</string>
    <string name="st_perfil_d_direccion">C/ Por defecto</string>
    <string name="st_perfil_d_dni">87654321A</string>
    <string name="st_perfil_d_fnacimiento">01/01/2019</string>
    <string name="st_perfil_guardar">Guardar Cambios</string>
    <string name="st_perfil_contraseña">Cambiar Contraseña</string>
    <string name="st_perfil_editar">Editar</string>
    <string name="st_perfil_cancelar">Cancelar</string>

    //String popUp de cambiar contraseña
    <string name="st_tv_cambiar">Cambiar Contraseña</string>
    <string name="st_et_nueva_contrasena">Nueva Contraseña</string>
    <string name="st_et_antigua_contrasena">Antigua Contraseña</string>
    <string name="st_btn_guardar_contrasena">Guardar</string>
    <string name="st_ch_ver_contrasenas">Ver contraseñas</string>
    <string name="st_tv_ok">Contraseña cambiada correctamente</string>
    <string name="st_tv_fail_nyn">No se ha podido cambiar la contraseña, Las contraseñas nuevas no son iguales</string>
    <string name="st_tv_fail_a">No se ha podido cambiar la contraseña, La contraseña antigua es incorrecta</string>
    <string name="st_tv_fail_nya">No se ha podido cambiar la contraseña, La contraseña nueva es igual que la antigua</string>

    //String Usuarios Tipo
    <string name="st_usuario_tipo_admin">Admin</string>
    <string name="st_usuario_tipo_trabajador">Trabajador</string>
    <string name="st_usuario_tipo_cliente">Cliente</string>


    <string name="title_activity_main_admin">MainActivityAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //String menu Admin
    //Ventas
    <string name="st_menu_servicios_admin">Servicios</string>
    <string name="st_menu_contratos">Contratos</string>
    //Compras
    <string name="st_menu_proveedor">Proveedores</string>
    <string name="st_menu_facturas">Facturas</string>
    //RRHH
    <string name="st_menu_trabajadores">Trabajadores</string>
    <string name="st_menu_control_de_asistencia">Control de asistencia</string>
    //Cliente
    <string name="st_menu_clientes">G. Clientes</string>


    //String menu Trabajador
    <string name="st_menu_calendario_trabajador">Calendario</string>
    <string name="st_menu_nominas">Nominas</string>
    <string name="st_menu_vacaciones">Vacaciones</string>
    <string name="todo">TODO</string>

    // String Login
    <string name="st_login_dni_usuario">DNI:</string>
    <string name="st_login_contraseña_usuario">Contraseña:</string>
    <string name="st_login_boton_entrar">Entrar</string>
    <string name="st_login_boton_crear_cuenta">Crear cuenta</string>
    <string name="st_ch_ver_contrasena">Ver contraseña</string>
    <string name="st_login_contrseña_olvidada">Contraseña olvidada?</string>
    <string name="st_login_datos_erroneos">Datos incorrectos</string>


    //String Contraseña olvidada
    <string name="st_contrasena_olvidada_recupera">Recuperar cuenta</string>
    <string name="st_contrasena_olvidada_email">Introduce el e-mail de tu cuenta </string>
    <string name="st_contrasena_olvidada_email_edittext">E-mail</string>
    <string name="st_contrasena_olvidada_email_no_existe">No hay ninguna cuenta registrada con ese e-mail.</string>


    //String Crear/Modificar cuenta
    <string name="st_crear_cuenta_introduce_datos">Introduce los siguientes datos</string>
    <string name="st_crear_cuenta_nombre">Nombre</string>
    <string name="st_crear_cuenta_apellido">Apellido</string>
    <string name="st_crear_cuenta_dni">DNI</string>
    <string name="st_crear_cuenta_email">Email</string>
    <string name="st_crear_cuenta_fnacimiento">Fecha de nacimiento</string>
    <string name="st_crear_cuenta_movil">Numero de teléfono</string>
    <string name="st_crear_cuenta_direccion">Dirección</string>
    <string name="st_crear_cuenta_contraseña">Contraseña</string>
    <string name="st_crear_cuenta_confirmarcontra">Confirmar contraseña</string>
    <string name="st_crear_cuenta_campo_vacio">Hay un campo vacio. Introduce todos los datos.</string>
    <string name="st_crear_cuenta_servicios">Servicios</string>
    <string name="st_crear_cuenta_sueldo">Sueldo</string>
    <string name="st_crear_cuenta_km">Sueldo</string>
    <string name="st_modificar_trabajador">Modificar</string>
    <string name="st_eliminar_trabajador">Eliminar</string>

    <string name="title_activity_main__trabajador">MainActivity_Trabajador</string>

    //String calendario trabajador
    <string name="st_titulo_tarea">TAREA:</string>
    <string name="st_titulo_hora">HORA</string>
    <string name="st_titulo_dirección">DIR.:</string>

    //String nombre cliente
    <string name="st_cliente">Cliente</string>
    <string name="st_trabajador">Trabajador</string>
    <string name="st_admin">Administrador</string>

    //String del apartado nominas
    <string name="st_empresa"> Empresa: Goazen</string>
    <string name="st_direccion">Dirección:</string>
    <string name="st_DNI">DNI:</string>
    <string name="st_telefono">Telefono:</string>
    <string name="st_nombre_apellido">Nombre y apellido</string>
    <string name="st_fecha_ingreso">Fecha ingreso:</string>

    <string name="deducciones">Deducciones</string>
    <string name="concepto">Concepto</string>
    <string name="cuantia">Cuantía</string>

    <string name="st_concepto_salario_base">Salario Base</string>
    <string name="st_concepto_km">Kilometros</string>
    <string name="st_concepto_antiguedad">Antiguedad</string>

    <string name="st_total_nomina">Total</string>
    <string name="st_Descargar_nomina">Descargar</string>


    <!--<string name="st_"></string>-->


</resources>
