<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_servicio"
            android:icon="@drawable/escoba"
            android:title="@string/st_menu_servicio" />
        <item
            android:id="@+id/nav_ubic"
            android:icon="@drawable/ubicacion"
            android:title="@string/st_menu_ubicacion" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/telefono"
            android:title="@string/st_menu_contacto" />
        <item
            android:id="@+id/nav_recibos"
            android:icon="@drawable/pdf"
            android:title="@string/st_menu_recibos" />
    </group>

    <item android:title="@string/titulo_op_menu2">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/lapiz"
                android:title="@string/st_menu_perfil" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/candado"
                android:title="@string/st_menu_logout" />
        </menu>
    </item>

</menu>
