<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil_trabajador"
            android:icon="@drawable/lapiz"
            android:title="@string/st_menu_perfil" />
        <item
            android:id="@+id/nav_calendario_trabajador"
            android:icon="@drawable/candado"
            android:title="@string/st_menu_calendario_trabajador" />
        <item
            android:id="@+id/nav_nominas_trabajador"
            android:icon="@drawable/pdf"
            android:title="@string/st_menu_nominas" />
        <item
            android:id="@+id/nav_vacaciones"
            android:icon="@drawable/candado"
            android:title="@string/st_menu_vacaciones" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_log_out_trabajadores"
                android:icon="@drawable/candado"
                android:title="@string/st_menu_logout" />
        </menu>
    </item>

</menu>
