<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="732dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516"
        android:padding="10dp">

        <Switch
            android:id="@+id/sw_servicio_admin_limpieza_general"
            style="@style/SwitchServicios"
            android:text="@string/st_limpieza_general"/>

        <Switch
            android:id="@+id/sw_servicio_admin_limpieza_cristales"
            style="@style/SwitchServicios"
            android:text="@string/st_limpieza_cristales"/>

        <Switch
            android:id="@+id/sw_servicio_admin_lavanderia"
            style="@style/SwitchServicios"
            android:text="@string/st_lavanderia"/>

        <Switch
            android:id="@+id/sw_servicio_admin_paseo_mascotas"
            style="@style/SwitchServicios"
            android:text="@string/st_paseo_mascotas"/>

        <Switch
            android:id="@+id/sw_servicio_admin_regado_plantas"
            style="@style/SwitchServicios"
            android:text="@string/st_regado_plantas"/>

        <Switch
            android:id="@+id/sw_servicio_admin_plancha"
            style="@style/SwitchServicios"
            android:text="@string/st_plancha"/>

        <Switch
            android:id="@+id/sw_servicio_admin_cocina"
            style="@style/SwitchServicios"
            android:text="@string/st_cocina"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>