<?xml version="1.0" encoding="utf-8"?>
<!--Layout relative para autoajustarse a cualquier dispositivo -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


        <ScrollView
            android:id="@+id/scrollViewcreartrabajador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="40dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="30dp" />

                        <TextView
                            android:id="@+id/textViewCTIDatos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/st_crear_cuenta_introduce_datos" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="53dp" />

                        <TextView
                            android:id="@+id/textViewCTNombre"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_nombre" />

                        <EditText
                            android:id="@+id/editTextCTNombre"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="textPersonName"
                            android:text="" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTApellido"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_apellido" />

                        <EditText
                            android:id="@+id/editTextCTApellido"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="textPersonName"
                            android:text="" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTDNI"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_dni" />

                        <EditText
                            android:id="@+id/editTextCTDNI"
                            style="@style/EditTextCrearModificarCuenta"
                            android:maxLength="9"
                            android:inputType="textPersonName"
                            android:text="" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTEmail"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_email" />


                        <EditText
                            android:id="@+id/editTextCTEmail"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="textEmailAddress" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTTelefono"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_movil" />



                        <EditText
                            android:id="@+id/editTextCTTelefono"
                            style="@style/EditTextCrearModificarCuenta"
                            android:maxLength="9"
                            android:inputType="number" />

                        <Space
                                android:layout_width="match_parent"
                                android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTNacimiento"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_fnacimiento" />


                        <EditText
                            android:id="@+id/editTextCTFNacimiento"
                            style="@style/EditTextCrearModificarCuenta"
                            android:maxLength="10"
                            android:inputType="date" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTDireccion"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_direccion" />

                        <EditText
                            android:id="@+id/editTextCTDireccion"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="textPersonName"
                            android:text="" />
                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTContraseña"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_contraseña" />


                        <EditText
                            android:id="@+id/editTextCTContraseña"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="textPassword" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTConfirmarContraseña"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_confirmarcontra" />

                        <EditText
                            android:id="@+id/editTextCTConfirmarContra"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="textPassword" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />
                        <TextView
                            android:id="@+id/textViewCTSueldo"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_sueldo" />

                        <EditText
                            android:id="@+id/editTextCTSueldo"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="number" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTKm"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_concepto_km" />

                        <EditText
                            android:id="@+id/editTextCTKm"
                            style="@style/EditTextCrearModificarCuenta"
                            android:inputType="number" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/textViewCTServicios"
                            style="@style/TextViewCrearCuenta"
                            android:text="@string/st_crear_cuenta_servicios" />


                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                                <Space
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                        <CheckBox
                                            android:id="@+id/cb_limpieza_general"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/st_limpieza_general" />

                                        <CheckBox
                                            android:id="@+id/cb_cocina"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/st_cocina" />

                                        <CheckBox
                                            android:id="@+id/cb_plancha"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/st_plancha" />

                                        <CheckBox
                                            android:id="@+id/cb_lavanderia"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/st_lavanderia" />

                                </LinearLayout>

                                <Space
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                        <CheckBox
                                            android:id="@+id/cb_regado_plantas"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/st_regado_plantas" />

                                        <CheckBox
                                            android:id="@+id/cb_limpieza_cristales"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/st_limpieza_cristales" />

                                        <CheckBox
                                            android:id="@+id/cb_paseo_mascotas"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/st_paseo_mascotas" />

                                </LinearLayout>

                                <Space
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                        </LinearLayout>


                        <TextView
                        android:id="@+id/textViewCampoVacioTrabajador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/st_crear_cuenta_campo_vacio"
                        android:textColor="#F00"
                        android:visibility="invisible"
                        tools:visibility="invisible" />
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <Button
                            android:id="@+id/buttonCT"
                            style="@style/ButtonContratarAceptar"
                            android:text="@string/st_login_boton_crear_cuenta" />
                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="30dp" />
                </LinearLayout>

        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

